UI: Fixed mobile header overlap by increasing offset to 70px

--- a/Admin/style.css
+++ b/Admin/style.css
@@ -1346,7 +1346,7 @@ html, body {
 
     :root {
         --sidebar-width: 0px;
-        --header-offset: 25px;
+        --header-offset: 70px;
     }
 
     body {
